--- a/index.html
+++ b/index.html
@@ -48,13 +48,8 @@
       <!-- mv -->
       <div class="mv">
         <div class="mv-container">
+          <p class="mv-subtitle">Welcome to</p>
           <p class="mv-title">Taizo's Portfolio</p>
-          <p class="mv-subtitle">PORTFOLIO</p>
-          <p class="mv-text">
-            情報系の学部を卒業後，エンジニアとして働きながら，社会人学生として技術経営の修士号を取得.<br>
-            キャリアと学びを重視すると同時に，カメラやカフェ巡り，バイクなどの趣味にも力を入れる.<br>
-            技術とビジネスの両面からの視点を持つことで，新しいアイデアを生み出し，社会に貢献することを目指す25歳.
-          </p>
         </div>
       </div>
       <!-- /mv -->
@@ -110,25 +105,6 @@
       </section>
       <!-- /Works -->
       
-      <!-- Works -->
-      <section class="skill section" id="Works">
-        <div class="container">
-          <h2 class="title">Works</h2>
-          <div class="skill-list">
-            <div class="skill-item">
-              <p class="skill-img"><img src="img/icon_skill.png" alt=""></p>
-              <div class="skill-body">
-                <h3 class="skill-name">撮影依頼はこちらから</h3>
-                <p class="skill-text">
-                  テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります。</p>
-              </div>
-            </div>
-            
-          </div>
-        </div>
-      </section>
-      <!-- /Works -->
-
       <!-- about -->
       <section class="about section" id="About">
         <div class="container">
