--- a/index.html
+++ b/index.html
@@ -119,10 +119,14 @@
               <h5>1997.12.13 京都府出身</h5>
               <p>
                 <br>
-                2020.03 ： 立命館大学 情報理工学部 卒業<br>
-                2020.04 〜 2022.08 ： 某IT企業 エンジニア<br>
-                2023.03 ： 立命館大学大学院 テクノロジーマネジメント研究科 修了<br>
-                2023.04 〜 現在 ： 某コンサルティングファーム コンサルタント<br>
+                2020.03<br>
+                  &emsp;&emsp;立命館大学 情報理工学部 卒業<br>
+                2020.04 〜 2022.08<br>
+                  &emsp;&emsp;某IT企業 エンジニア<br>
+                2023.03<br>
+                  &emsp;&emsp;立命館大学大学院 テクノロジーマネジメント研究科 修了<br>
+                2023.04 〜 現在<br>
+                  &emsp;&emsp;某コンサルティングファーム コンサルタント<br>
               </p>
             </div>
           </div>
