--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="shortcut icon" href="img/favicon.ico" />
   <link rel=”canonical” href=”URLが入る” />
     <!--iPhoneアイコン設定-->
-    <link rel="apple-touch-icon" href="img/icon.PNG">
+    <link rel="apple-touch-icon" href="img/icon.jpg">
     
 </head>
 
@@ -62,27 +62,27 @@
             <a class="works-item" href="index.html">
               <div class="works-img"><img src="img/tokyo_tower.jpg" alt="" /></div>
               <p class="works-name">Buildings</p>
-              <p class="works-info">説明文を追加</p>
+              <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
             <a class="works-item" href="index.html">
               <div class="works-img"><img src="img/portrait.jpg" alt="" /></div>
               <p class="works-name">Portrait</p>
-              <p class="works-info">説明文を追加</p>
+              <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
             <a class="works-item" href="index.html">
               <div class="works-img"><img src="img/foods.jpg" alt="" /></div>
               <p class="works-name">Foods</p>
-              <p class="works-info">説明文を追加</p>
+              <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
             <a class="works-item" href="index.html">
               <div class="works-img"><img src="img/Night.jpg" alt="" /></div>
               <p class="works-name">Night</p>
-              <p class="works-info">説明文を追加</p>
+              <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
             <a class="works-item" href="index.html">
               <div class="works-img"><img src="img/Motorcycle.jpg" alt="" /></div>
               <p class="works-name">Motorcycle</p>
-              <p class="works-info">説明文を追加</p>
+              <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
           </div>
         </div>
@@ -119,12 +119,12 @@
               <h5>1997.12.13 京都府出身</h5>
               <p>
                 <br>
-                2020.03<br>
+                2016.04 〜 2020.03<br>
                   &emsp;&emsp;立命館大学 情報理工学部 卒業<br>
                 2020.04 〜 2022.08<br>
                   &emsp;&emsp;某IT企業 エンジニア<br>
-                2023.03<br>
-                  &emsp;&emsp;立命館大学大学院 テクノロジーマネジメント研究科 修了<br>
+                2021.04 〜 2023.03<br>
+                  &emsp;&emsp;立命館大学大学院 MOT研究科 修了<br>
                 2023.04 〜 現在<br>
                   &emsp;&emsp;某コンサルティングファーム コンサルタント<br>
               </p>
