--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
               <p class="works-name">Buildings</p>
               <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
-            <a class="works-item" href="index.html">
+            <a class="works-item" href="Portrait.html">
               <div class="works-img"><img src="img/portrait.jpg" alt="" /></div>
               <p class="works-name">Portrait</p>
               <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
-            <a class="works-item" href="index.html">
+            <a class="works-item" href="Foods.html">
               <div class="works-img"><img src="img/foods.jpg" alt="" /></div>
               <p class="works-name">Foods</p>
               <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
-            <a class="works-item" href="index.html">
+            <a class="works-item" href="Night.html">
               <div class="works-img"><img src="img/Night.jpg" alt="" /></div>
               <p class="works-name">Night</p>
               <p class="works-info"><!-- 説明文を追加 --></p>
@@ -95,7 +95,7 @@
           <h2 class="title">Works</h2>
           <h3 style="text-align: left">【撮影内容】</h3>
           <p class="lead" style="text-align: left">
-            都内から日帰り可能な範囲での,人物撮影依頼を受け付けております.<br class="pc-only">
+            都内から日帰り可能な範囲での人物撮影依頼を受け付けております.<br class="pc-only">
             ペットや物撮りなど,他に撮影希望がございましたら,お気軽にご相談ください.
             お見積り,ご相談のみも可能です.<br>
             ・商用利用：OK<br>
