--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="css/ress.css" media="all" rel="stylesheet" type="text/css" />
     <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="img/favicon.ico" />
-    <link rel=”canonical” href=”URLが入る” />
+    <link rel=”canonical” href=”https://is0352rh.github.io/Photography/” />
     <!--iPhoneアイコン設定-->
     <link rel="apple-touch-icon" href="img/icon.jpg">
     
@@ -84,6 +84,11 @@
               <p class="works-name">Motorcycle</p>
               <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
+            <a class="works-item" href="Others.html">
+              <div class="works-img"><img src="img/Others.jpg" alt="" /></div>
+              <p class="works-name">Others</p>
+              <p class="works-info"><!-- 説明文を追加 --></p>
+            </a>
           </div>
         </div>
       </section>
@@ -111,7 +116,7 @@
           <h3 style="text-align: left">【撮影機材】</h3>
           <p class="lead" style="text-align: left">
             ・Canon EOS Kiss M2 <br>
-            ・Sony Nex5  <br>
+            ・Sony NEX5  <br>
           </p>
           
         </div>
@@ -152,7 +157,7 @@
         <div class="container">
           <h2 class="title">Contact</h2>
           <p class="lead">
-            お問い合わせは<br class="sp-only">SNSまたは，メールにてお願いいたします。
+            撮影依頼,お問合せは<br class="sp-only">SNSまたは,メールにてお願いいたします.
           </p>
           <div class="contact-list">
             <a class="contact-item" href="https://twitter.com/is0352rh" target="_blank" rel="noopener">Twitter</a>
