--- a/Motorcycle.html
+++ b/Motorcycle.html
@@ -55,18 +55,18 @@
       
       <ul class="gallery">
         <li><a href="img/motorcycle/motorcycle_1.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_1.jpeg" alt=""></a></li>
-        <li><a href="img/motorcycle/motorcycle_2.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_2.jpeg" alt=""></a></l      
-        <li><a href="img/motorcycle/motorcycle_3.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_3.jpeg" alt=""></a></l      
-        <li><a href="img/motorcycle/motorcycle_4.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_4.jpeg" alt=""></a></l      
-        <li><a href="img/motorcycle/motorcycle_5.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_5.jpeg" alt=""></a></l      
-        <li><a href="img/motorcycle/motorcycle_6.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_6.jpeg" alt=""></a></l      
-        <li><a href="img/motorcycle/motorcycle_7.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_7.jpeg" alt=""></a></l      
-        <li><a href="img/motorcycle/motorcycle_8.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_8.jpeg" alt=""></a></l      
-        <li><a href="img/motorcycle/motorcycle_9.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_9.jpeg" alt=""></a></l      
-        <li><a href="img/motorcycle/motorcycle_10.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_10.jpeg" alt=""></a></l      
-        <li><a href="img/motorcycle/motorcycle_11.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_11.jpeg" alt=""></a></l      
-        <li><a href="img/motorcycle/motorcycle_12.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_12.jpeg" alt=""></a></l      
-        <li><a href="img/motorcycle/motorcycle_13.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_13.jpeg" alt=""></a></l      
+        <li><a href="img/motorcycle/motorcycle_2.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_2.jpeg" alt=""></a></li>     
+        <li><a href="img/motorcycle/motorcycle_3.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_3.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_4.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_4.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_5.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_5.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_6.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_6.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_7.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_7.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_8.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_8.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_9.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_9.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_10.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_10.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_11.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_11.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_12.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_12.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_13.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_13.jpeg" alt=""></a></li>      
       </ul>
       
       <div class="page-top" id="js-page-top">
