--- a/Others.html
+++ b/Others.html
@@ -61,6 +61,7 @@
         <li><a href="img/others/others_5.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/others/others_5.jpeg" alt=""></a></li>
         <li><a href="img/others/others_6.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/others/others_6.jpeg" alt=""></a></li>
         <li><a href="img/others/others_7.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/others/others_7.jpeg" alt=""></a></li>
+        <li><a href="img/others/others_8.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/others/others_8.jpeg" alt=""></a></li>
       </ul>
       
       <div class="page-top" id="js-page-top">
