--- a/Portrait.html
+++ b/Portrait.html
@@ -65,6 +65,12 @@
         <li><a href="img/portrait/portrait_9.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_9.jpg" alt=""></a></li>
         <li><a href="img/portrait/portrait_10.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_10.jpg" alt=""></a></li>
         <li><a href="img/portrait/portrait_11.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_11.jpg" alt=""></a></li>
+        <li><a href="img/portrait/portrait_12.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_12.jpg" alt=""></a></li>
+        <li><a href="img/portrait/portrait_13.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_13.jpg" alt=""></a></li>
+        <li><a href="img/portrait/portrait_14.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_14.jpg" alt=""></a></li>
+        <li><a href="img/portrait/portrait_15.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_15.jpg" alt=""></a></li>
+        <li><a href="img/portrait/portrait_16.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_16.jpg" alt=""></a></li>
+        <li><a href="img/portrait/portrait_17.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_17.jpg" alt=""></a></li>
       </ul>
       
       <div class="page-top" id="js-page-top">
