--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
             <a class="works-item" href="Portrait.html">
-              <div class="works-img"><img src="img/portrait.jpg" alt="" /></div>
+              <div class="works-img"><img src="img/portrait/portrait_0.jpg" alt="" /></div>
               <p class="works-name">Portrait</p>
               <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
@@ -115,7 +115,7 @@
           <h3 style="text-align: left">【撮影機材】</h3>
           <p class="lead" style="text-align: left">
             ・Canon EOS Kiss M2 <br>
-            ・Sony α7 ILCE7  <br>
+            ・Canon EOS 1300D  <br>
             ・Sony NEX5-R  <br>
           </p>
           
@@ -137,6 +137,11 @@
               <h5>1997.12.13 京都府出身</h5>
               <p>
                 <br>
+                人物撮影を得意としています.
+                高校生時代、趣味からカメラにハマり現在カメラ歴10年ほどになります.
+                何気ない日常から人生の大切な瞬間まで, あなたの思い出を残すお手伝いをさせてください.
+                
+                  <!--
                 2016.04 〜 2020.03<br>
                 &emsp;&emsp;立命館大学 情報理工学部 卒業<br>
                 2020.04 〜 2022.08<br>
@@ -145,6 +150,7 @@
                 &emsp;&emsp;立命館大学大学院 MOT研究科 修了<br>
                 2023.04 〜 現在<br>
                 &emsp;&emsp;某コンサルティングファーム コンサルタント<br>
+                -->
               </p>
             </div>
           </div>
