--- a/Motorcycle.html
+++ b/Motorcycle.html
@@ -67,6 +67,11 @@
         <li><a href="img/motorcycle/motorcycle_11.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_11.jpeg" alt=""></a></li>      
         <li><a href="img/motorcycle/motorcycle_12.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_12.jpeg" alt=""></a></li>      
         <li><a href="img/motorcycle/motorcycle_13.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_13.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_14.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_14.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_15.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_15.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_16.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_16.jpeg" alt=""></a></li>      
+        <li><a href="img/motorcycle/motorcycle_17.jpeg" data-lightbox="gallery1" data-title="キャプション"><img src="img/motorcycle/motorcycle_17.jpeg" alt=""></a></li>      
+
       </ul>
       
       <div class="page-top" id="js-page-top">
