--- a/Night.html
+++ b/Night.html
@@ -6,7 +6,7 @@
     <meta property='og:type' content='website'>
     <meta property='og:title' content='Taizo Kishimotoのポートフォリオ'>
     <meta property='og:url' content='URLが入る'>
-    <meta property='og:description' content='Taizo Kishimotoのポートフォリオサイトです。'>
+    <meta property='og:description' content='Taizo Kishimotoのポートフォリオサイトです'>
     <meta property="og:image" content="img/ogp.PNG">
     <meta name="description" content="Taizo Kishimotoのポートフォリオサイトです" />
     <title>Taizo's Portfolio</title>
