--- a/Portrait.html
+++ b/Portrait.html
@@ -59,7 +59,7 @@
         <li><a href="img/portrait/portrait_3.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_3.jpg" alt=""></a></li>
         <li><a href="img/portrait/portrait_4.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_4.jpg" alt=""></a></li>
         <li><a href="img/portrait/portrait_5.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_5.jpg" alt=""></a></li>
-
+        <li><a href="img/portrait/portrait_6.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_6.jpg" alt=""></a></li>
         <li><a href="img/portrait/portrait_7.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_7.jpg" alt=""></a></li>
         <li><a href="img/portrait/portrait_8.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_8.jpg" alt=""></a></li>
         <li><a href="img/portrait/portrait_9.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_9.jpg" alt=""></a></li>
@@ -71,6 +71,7 @@
         <li><a href="img/portrait/portrait_15.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_15.jpg" alt=""></a></li>
         <li><a href="img/portrait/portrait_16.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_16.jpg" alt=""></a></li>
         <li><a href="img/portrait/portrait_17.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_17.jpg" alt=""></a></li>
+        <li><a href="img/portrait/portrait_18.jpg" data-lightbox="gallery1" data-title="キャプション"><img src="img/portrait/portrait_18.jpg" alt=""></a></li>
       </ul>
       
       <div class="page-top" id="js-page-top">
