--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
             <a class="works-item" href="Motorcycle.html">
-              <div class="works-img"><img src="img/Motorcycle.jpg" alt="" /></div>
+              <div class="works-img"><img src="img/motorcycle/motorcycle_0.jpeg" alt="" /></div>
               <p class="works-name">Motorcycle</p>
               <p class="works-info"><!-- 説明文を追加 --></p>
             </a>
