--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="works section" id="Photographs">
         <div class="container">
           <h2 class="title">Photographs</h2>
-          <p style="text-align:center">Plese tap the pic.</p>
+          <p style="text-align:center">Please tap the pic.</p>
           <br>
           <div class="works-list">
             <a class="works-item" href="Buildings.html">
