--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property='og:type' content='website'>
     <meta property='og:title' content='Taizo Kishimotoのポートフォリオ'>
     <meta property='og:url' content='URLが入る'>
-    <meta property='og:description' content='Taizo Kishimotoのポートフォリオサイトです。'>
+    <meta property='og:description' content='Taizo Kishimotoのポートフォリオサイトです'>
     <meta property="og:image" content="img/ogp.PNG">
     <meta name="description" content="Taizo Kishimotoのポートフォリオサイトです" />
     <title>Taizo's Portfolio</title>
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
     <link href="css/ress.css" media="all" rel="stylesheet" type="text/css" />
     <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="shortcut icon" href="https://is0352rh.github.io/Photography/img/favicon.ico" />
     <link rel=”canonical” href=”https://is0352rh.github.io/Photography/” />
     <!--iPhoneアイコン設定-->
     <link rel="apple-touch-icon" href="img/icon.jpg">
@@ -95,12 +95,12 @@
           <h2 class="title">Works</h2>
           <h3 style="text-align: left">【料金】</h3>
           <p class="lead" style="text-align: left">
-            ・基本料金 ¥10,000 + (往復の交通費) + (場所代)
+            ・基本料金 ¥10,000 + (交通費) + (場所代)
           <h3 style="text-align: left">【撮影内容】</h3>
           <p class="lead" style="text-align: left">
-            都内から日帰り可能な範囲での人物撮影依頼を受け付けております.<br class="pc-only">
-            ペットや物撮りなど,他に撮影希望がございましたら,お気軽にご相談ください.
-            お見積り,ご相談のみも可能です.<br>
+            都内から日帰り可能な範囲で人物撮影依頼を受け付けております。<br class="pc-only">
+            ペットや物撮り、他に撮影希望があれば、お気軽にご相談ください。
+            お見積り、ご相談のみも可能です。<br>
             ・商用利用：OK<br>
             ・二次利用：OK<br>
             ・お届け日数：１週間以内<br>
@@ -129,9 +129,9 @@
               <h5>1997.12.13 京都府出身</h5>
               <p>
                 <br>
-                人物撮影を得意としています.
-                高校生時代、趣味からカメラにハマり現在カメラ歴10年ほどになります.
-                何気ない日常から人生の大切な瞬間まで, あなたの思い出を残すお手伝いをさせてください.
+                人物撮影を得意としています。
+                高校生時代、趣味からカメラにハマり現在カメラ歴10年ほどになります。
+                何気ない日常から人生の大切な瞬間まで、あなたの思い出を残すお手伝いをさせてください。
                 </p>
             </div>
           </div>
