--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
           </p>
           <h3 style="text-align: left">【撮影機材】</h3>
           <p class="lead" style="text-align: left">
+            ・Sony α7 Ⅳ
             ・Canon EOS Kiss M2 <br>
             ・Canon EOS 1300D  <br>
             ・Sony NEX5-R  <br>
