--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
           <h2 class="title">Works</h2>
           <h3 style="text-align: left">【料金】</h3>
           <p class="lead" style="text-align: left">
-            ・基本料金 ¥10,000 + (交通費) + (場所代)
+            ・基本料金 ¥15,000 / 1.5h + (交通費) + (場所代)<br>
+            ・延長料金 + ¥2,000 / 30min
           <h3 style="text-align: left">【撮影内容】</h3>
           <p class="lead" style="text-align: left">
             都内から日帰り可能な範囲で人物撮影依頼を受け付けております。<br class="pc-only">
@@ -104,7 +105,7 @@
             ・商用利用：OK<br>
             ・二次利用：OK<br>
             ・お届け日数：１週間以内<br>
-            ・ファイル形式：JPG<br>
+            ・ファイル形式：JPG or RAW<br>
           </p>
           <h3 style="text-align: left">【撮影機材】</h3>
           <p class="lead" style="text-align: left">
